[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Finish.tscn" type="PackedScene" id=2]
[ext_resource path="res://FruitPositions.gd" type="Script" id=3]
[ext_resource path="res://fruitGame.gd" type="Script" id=6]
[ext_resource path="res://fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Medium.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 11 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -516.198, 2.09125 )
b = Vector2( 509.378, -1.68854 )

[node name="fruitGame" type="Node"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 380.501, 560.38 )
scale = Vector2( 1.25, 1.25 )

[node name="Text" type="Label" parent="."]
margin_right = 129.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitText" type="Label" parent="."]
margin_left = 5.0
margin_top = 584.0
margin_right = 248.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 2 )
text = "Press \"Q\" to leave the room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameText" type="Label" parent="."]
visible = false
anchor_top = 0.955
anchor_bottom = 0.955
margin_left = 3.56763
margin_top = -2.37842
margin_right = 246.568
margin_bottom = 10.6216
custom_fonts/font = SubResource( 2 )
text = "Press \"N\" to start a new game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitPositions" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="FruitPositions"]
position = Vector2( 104.882, 0 )

[node name="Position2D2" type="Position2D" parent="FruitPositions"]
position = Vector2( 281.682, 1.49831 )

[node name="Position2D3" type="Position2D" parent="FruitPositions"]
position = Vector2( 453.987, -1.49831 )

[node name="Position2D4" type="Position2D" parent="FruitPositions"]
position = Vector2( 644.272, -1.49831 )

[node name="Position2D5" type="Position2D" parent="FruitPositions"]
position = Vector2( 785.113, 9.53674e-07 )

[node name="Position2D6" type="Position2D" parent="FruitPositions"]
position = Vector2( 940.937, 0 )

[node name="Position2D7" type="Position2D" parent="FruitPositions"]
position = Vector2( 182.793, 1.49831 )

[node name="Position2D8" type="Position2D" parent="FruitPositions"]
position = Vector2( 361.092, 1.49831 )

[node name="Position2D9" type="Position2D" parent="FruitPositions"]
position = Vector2( 549.879, 0 )

[node name="Position2D10" type="Position2D" parent="FruitPositions"]
position = Vector2( 711.696, 1.49831 )

[node name="Position2D11" type="Position2D" parent="FruitPositions"]
position = Vector2( 875.011, -1.49831 )

[node name="Position2D12" type="Position2D" parent="FruitPositions"]
position = Vector2( 1008.36, 1.49831 )

[node name="Position2D13" type="Position2D" parent="FruitPositions"]
position = Vector2( 46.4475, -1.49831 )

[node name="FruitTimer" type="Timer" parent="."]
wait_time = 4.5

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="Time" type="Label" parent="."]
anchor_left = 0.958298
anchor_top = 0.969857
anchor_right = 0.958298
anchor_bottom = 0.969857
margin_left = 3.0
margin_right = 40.0
margin_bottom = 14.0
text = "300"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Time2" type="Label" parent="."]
anchor_left = 0.959
anchor_top = 0.926
anchor_right = 0.959
anchor_bottom = 0.926
margin_left = -0.0160522
margin_top = 6.34601
margin_right = 40.9839
margin_bottom = 22.346
text = "60"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameTimer" type="Timer" parent="."]
wait_time = 300.0

[node name="Timer" type="Timer" parent="."]

[node name="FinishHUD" parent="." instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 514.048, 599.722 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="catched" from="Player" to="." method="_on_Player_catched"]
[connection signal="timeout" from="FruitTimer" to="." method="_on_FruitTimer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GamerTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
